# TradingAgents-CN

./: .env.example  .gitignore  BUTTON_VISIBILITY_FIX.md  CHANGELOG_UI_TASK_CONTROL.md  GEMINI.md  README.md  __dummy__.ipynb  docker-compose.yml  implementation_plan.md  package-lock.json  pyproject.toml  requirements.txt  start_api.bat  test_step_tracking.py
app/: __init__.py  apex_api_postman.json  main.py  后端服务接口架构设计.md  后端服务接口规范.md  接口开发计划.md  接口开发需求.md  查询任务历史步骤.json  查询任务历史状态.json
app/core/: config.py  startup_validator.py
app/docs/: 后端服务接口架构设计.md  后端服务接口规范.md  后端服务设计参考.md  接口开发计划.md
app/routers/: analysis.py  backtest.py  cache.py  config.py  health.py  (+8 more)
config/: logging.toml  message_config.json  models.json  pricing.json  settings.json  usage-1204.json  usage.json
docs/: modular_env_config.md  modular_env_implementation.md  modular_env_quickstart.md  tushare_news_api_limitations.md
examples/: modular_env_example.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  前端开发需求.md
scripts/: check_api_config.py  inspect_akshare_stock_info.py  test_all_news_sources.py  test_chinese_finance_news.py  test_eodhd_provider.py  test_fundamentals_with_stock_name.py  test_integration_validation.py  test_tushare_news.py
tests/: manual_test_websocket.py  redis_cache_copy.py  temp_data_tools.py  test_eodhd.py  test_fix.py  test_modular_env.py  test_mongodb_check.py  test_signal_processing_logging.py  test_task_control.py
tradingagents/: exceptions.py
web/: COMPONENT_REFACTORING_SUMMARY.md  FINAL_REFACTORING_SUMMARY.md  STYLE_REFACTORING_SUMMARY.md  app.py  app2.py
web2/: app.py  run_web.py
web_bak/: app_option_menu.py
(+639 files in other folders)
